src/FinancialForce ClickLink/objects/IntegrationRuleLog__c.object
<CustomObject>
    <customHelpPage>helpintegrationrulelog</customHelpPage>
    <fields>
        <fullName>ApexJobID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Apex Job ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <summaryFilterItems>
            <field>IntegrationRuleLogLineItem__c.Severity__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>IntegrationRuleLogLineItem__c.IntegrationRuleLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IntegrationRuleButton__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Button</label>
        <referenceTo>IntegrationRuleButton__c</referenceTo>
        <relationshipLabel>ClickLink Logs</relationshipLabel>
        <relationshipName>IntegrationRuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntegrationRuleJobNoneScheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Now Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegrationRuleJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Job</label>
        <referenceTo>IntegrationRuleJob__c</referenceTo>
        <relationshipLabel>ClickLink Logs</relationshipLabel>
        <relationshipName>IntegrationRuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntegrationRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClickLink Rule</label>
        <referenceTo>IntegrationRule__c</referenceTo>
        <relationshipLabel>ClickLink Logs</relationshipLabel>
        <relationshipName>IntegrationRuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lines__c</fullName>
        <label>Lines</label>
        <summaryForeignKey>IntegrationRuleLogLineItem__c.IntegrationRuleLog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IntegrationRuleLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ClickLink Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IntegrationRule__c</columns>
        <columns>IntegrationRuleButton__c</columns>
        <columns>IntegrationRuleJob__c</columns>
        <columns>Summary__c</columns>
        <columns>Errors__c</columns>
        <columns>Lines__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LogsWithErrors</fullName>
        <columns>NAME</columns>
        <columns>IntegrationRule__c</columns>
        <columns>IntegrationRuleButton__c</columns>
        <columns>IntegrationRuleJob__c</columns>
        <columns>Summary__c</columns>
        <columns>Errors__c</columns>
        <columns>Lines__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Errors__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Logs with Errors</label>
    </listViews>
    <nameField>
        <displayFormat>SOLOG-{00000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>